tests/NormalTests/paczka1/small_fuzzy/79372630.err
Error in line 6: d0mVB S197 95,9
Error in line 10: d0mVB A156 48,7
Error in line 2: CYEijvc84 A156 70,4
